packages/css/src/components/Checkbox.css
.Checkbox {
  position: relative;
  appearance: none;
  background: white;
  width: 20px;
  height: 20px;
  border: 1px solid var(--color-chatelle);
  border-radius: var(--space-s);
  cursor: pointer;
}

.Checkbox-label > .Checkbox {
  margin-right: var(--space-l);
}

.Checkbox-label {
  display: flex;
  cursor: pointer;
  color: var(--color-tolopea);
  font-size: var(--font-size--m);
}

.Checkbox-helper {
  margin: 0;
  padding: 0;
  color: var(--color-granite);
  font-size: var(--font-size--s);
}

.Checkbox:hover {
  border-color: var(--color-granite);
}

.Checkbox:disabled {
  background: var(--color-grey);
  cursor: not-allowed;
}

.Checkbox:disabled:hover {
  border-color: var(--color-chatelle);
}

.Checkbox:checked,
.Checkbox.is-undefined {
  color: white;
  background-color: var(--color-rose);
  border-color: var(--color-rose);
}

.Checkbox:checked:disabled,
.Checkbox:disabled.is-undefined {
  border: 1px solid var(--color-chatelle);
  background: var(--color-grey);
}

.Checkbox:checked:after {
  content: "";
  width: 10px;
  height: 5px;
  position: absolute;
  top: 4px;
  left: 3px;
  border-left: 2px solid white;
  border-bottom: 2px solid white;
  transform: rotate(-45deg);
}

.Checkbox:disabled:checked:after {
  border-color: var(--color-alto);
}

.Checkbox.is-undefined:after {
  content: "";
  width: 12px;
  height: 1px;
  position: absolute;
  top: 7px;
  left: 3px;
  border-bottom: 2px solid white;
}

.Checkbox:disabled.is-undefined:after {
  border-color: var(--color-alto);
}

